better sizing (again), fixes
fix for invisible elements being too big when getting visible
fix some texts not breaking and causing overflow
fixed search button being covered by sidebar button on some resolutions

--- a/WMTweaks.css
+++ b/WMTweaks.css
@@ -8,7 +8,7 @@
 #sidebar {
   position: fixed;
   right: 0;
-  top: 4rem;
+  top: 10vmin;
   bottom: 0;
   display: grid;
   width: auto;
@@ -20,13 +20,13 @@
 }
 #toggleSidebar {
   grid-column: 1;
-  width: 2rem;
+  width: 1.5rem;
   padding: 0;
   background: linear-gradient(#56849b, lightblue);
 }
 #content {
-  width: calc(100% - 2rem);
-  margin-top: 4rem;
+  width: calc(100% - 1.5rem);
+  margin-top: 10vmin;
 }
 #wrap {
   max-width: unset;
@@ -63,7 +63,7 @@
 }
 #mobileHeader ul li a {
   display: block;
-  padding: 1rem;
+  padding: 3vmin;
   color: #333;
   text-decoration: none;
   border: 1px outset #ccc;
@@ -79,7 +79,7 @@
 #mobileNavBtn img {
   max-width: 100%;
   max-height: 100%;
-  height: 4rem;
+  height: 10vmin;
 }
 #mobileProfile {
   float: right;
@@ -88,7 +88,7 @@
 }
 #mobileNavBtn {
   margin-left: 10px;
-  margin-right: calc(50% - 4rem);
+  margin-right: calc(50% - 15vmin - 10px);
   padding: 0;
 }
 #mobileHeader button {
@@ -119,6 +119,7 @@ body {
 * {
   min-width: unset;
   overflow-wrap: break-word;
+  white-space: normal;
 }
 #ctl00_ContentBody_HuntUserGridControl1_uxGrid * {
   margin: 0;
